Adding button for download.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,13 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/true_button"
+            android:id="@+id/download_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/download_button" />
 
         <Button
-            android:id="@+id/false_button"
+            android:id="@+id/playlocal_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/playlocal_button" />
