--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,13 @@
             android:layout_height="wrap_content"
             android:text="@string/download_button" />
 
-        <!--
+
         <Button
-            android:id="@+id/cancel_download_button"
+            android:id="@+id/delete_video_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cancel_download_button" />
-        -->
+            android:text="@string/delete_video_button" />
+
         <Button
             android:id="@+id/playlocal_button"
             android:layout_width="wrap_content"
